# CourseProject

./: CMakeLists.txt  ControllerInterface.h  Date.cpp  Date.h  Event.cpp  Event.h  EventController.cpp  EventController.h  FileManager.cpp  FileManager.h  Task.cpp  Task.h  TaskController.cpp  TaskController.h  Time.cpp  Time.h  Validation.h  main.cpp
Events/: 1900-01-01.txt  2024-07-26.txt  2024-07-27.txt  2024-07-29.txt  2024-07-30.txt  2024-07-31.txt  2024-08-01.txt
Tasks/: 2024-07-25.txt
